<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manuel_will_unsplash2"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/caller_iv"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/secret_caller"
            android:src="@drawable/ic_account_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/phone_number_tv"
            style="@style/Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caller_iv"
            app:layout_constraintVertical_bias="0.05"
            tools:text="******9300" />

        <TextView
            android:id="@+id/call_incoming_tv"
            style="@style/Subtitle"
            android:text="@string/incoming_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_tv" />

        <Chronometer
            android:id="@+id/call_chronometer"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_tv" />

        <ImageView
            android:id="@+id/speaker_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:contentDescription="@string/speaker"
            android:src="@drawable/ic_volume_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/call_chronometer" />

        <ImageView
            android:id="@+id/microphone_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:contentDescription="@string/speaker"
            android:src="@drawable/ic_mic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/call_chronometer" />

        <View
            android:id="@+id/left_guide_line"
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/call_reject_iv"
            app:layout_constraintStart_toStartOf="@id/call_reject_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/right_guide_line"
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/call_answer_iv"
            app:layout_constraintStart_toStartOf="@id/call_answer_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/circle_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.3"
            android:background="@drawable/circle_empty"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/call_incoming_iv"
            app:layout_constraintEnd_toEndOf="@id/right_guide_line"
            app:layout_constraintStart_toStartOf="@id/left_guide_line"
            app:layout_constraintTop_toTopOf="@id/call_incoming_iv" />

        <ImageView
            android:id="@+id/call_incoming_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/incoming_call"
            android:elevation="8dp"
            android:padding="12dp"
            android:src="@drawable/ic_local_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/vertical_bias" />

        <ImageView
            android:id="@+id/call_reject_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/touch_selector_red"
            android:contentDescription="@string/reject_call"
            android:elevation="8dp"
            android:padding="12dp"
            android:src="@drawable/ic_call_end"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/vertical_bias" />

        <ImageView
            android:id="@+id/call_answer_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/touch_selector_green"
            android:contentDescription="@string/answer_call"
            android:elevation="8dp"
            android:padding="12dp"
            android:src="@drawable/ic_call"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/vertical_bias" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>